kubernetes-templates/ad-man-go/0/ad-man-go-ad-man-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ad-man-go-ad-man
  namespace: default
  labels:
    heritage: helm
    name: ad-man-go-ad-man
spec:
  clusterIP: ${AD_MAN_GO_CLUSTER_IP}
  ports:
  - name: go-ad-man
    port: ${GO_AD_PORT}
    protocol: TCP
    targetPort: 6111
  selector:
    name: ad-man-go-ad-man
  sessionAffinity: None
  type: ClusterIP
